# event-planner

./: .coverage  .dockerignore  .gitignore  .yamllint.yml  Dockerfile.api  Makefile  Procfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  test-frontend.html  tsconfig.json
.github/workflows/: ci.yml  pages.yml
docs/: ICS-Connect-Design.md  frontend-ui-plan.md
src/ics_connect/: __init__.py  db.py  di.py  endpoints.py  errors.py  logging.py  main.py  models.py  settings.py  types.py  validation.py
src/ics_connect/middleware/: rate_limit.py
src/ics_connect/repositories/: inmemory.py  protocols.py  sql.py  sql_models.py
src/ics_connect/routers/: __init__.py  auth.py  bot.py  events.py  health.py  search.py
src/ics_connect/services/: events.py  reservations.py
src/ics_connect/util/: hashing.py  ids.py  jwt.py  time.py
src/ics_worker/: client.py  config.py  main.py  payload.py
tests/: test_api.py  test_auth.py  test_bot.py  test_db_di.py  test_endpoints_extra.py  test_errors_app_nonapp.py  test_errors_logging.py  test_http_api.py  test_http_reserve_auth.py  test_http_validation.py  test_rate_limit_and_cors.py  test_reservations_idempotent.py  test_router_events_parsers.py  test_sanity.py  test_services.py  test_settings.py  test_sql_idempotent.py  test_sql_integration.py  test_util_hashing.py  test_util_jwt.py  test_worker_payload.py  test_worker_search_parse.py  test_worker_status_parse.py  test_worker_summary_parse.py
tools/: __init__.py  guard.py  reset_events.py  reset_via_api.py  serve.py  web_check.ps1  web_guard.py
tools/guards/: __init__.py  exceptions_guard.py  logging_guard.py  typing_guard.py
web/: .eslintrc.cjs  NewTestHTML.html  config.json  index.html  package-lock.json  package.json  vitest.config.ts
web/assets/css/: NewTestCSS.css  base.css  components.css  layout.css
web/src/: app.ts  types.ts
web/src/api/: http.ts  (+1 more)
(+58 files in other folders)
