[tool.poetry]
name = "ics-connect"
version = "0.1.0"
description = "UCI ICS events + RSVP with Discord"
authors = ["ICS Connect Team"]
readme = "README.md"
packages = [
  { include = "ics_connect", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"
PyJWT = "^2.9.0"
argon2-cffi = "^23.1.0"
typing-extensions = "^4.12.2"
slowapi = "^0.1.9"
httpx = "^0.27.2"
"discord.py" = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
mypy = "^1.11.2"
ruff = "^0.6.8"
yamllint = "^1.35.1"
httpx = "^0.27.2"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","N","ANN","B","UP","SIM","ARG","PL","PERF","RUF","S"]
ignore = ["ANN101","ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
no_implicit_reexport = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_expr = true
disallow_any_explicit = true
disallow_subclassing_any = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = [
  "src/ics_connect/repositories/sql.py",
  "src/ics_connect/repositories/sql_models.py",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/ics_connect"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
